# remote-runner

./: Cargo.toml
.github/workflows/: ci.yml
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
test_script/: script.sh
