[package]
name = "remote-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"
ctrlc = "3.2.1"
common = { package = "remote-runner-common", version = "0.1.0", path = "../common" }
indicatif = "0.17.0-rc.1"
tokio = { version = "1.15.0", features = ["rt", "fs", "net", "sync", "io-util"] }
tracing = { version = "0.1.29", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.5", default-features = false, features = ["std", "fmt", "ansi"] }

