[package]
name = "remote-runner-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "remote-runner-common", version = "0.1.0", path = "../common" }
tokio = { version = "1.15.0", features = ["rt", "fs", "net", "io-util"] }
tracing = { version = "0.1.29", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.5", default-features = false, features = ["std", "fmt", "ansi"] }

