[package]
name = "remote-runner-server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { package = "remote-runner-common", version = "0.1.0", path = "../common" }
tokio = { version = "1.18.0", features = ["rt", "fs", "net", "io-util", "process", "sync", "time"] }
tracing = { version = "0.1.29", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.5", default-features = false, features = ["std", "fmt", "ansi"] }

